--- a/index.html
+++ b/index.html
@@ -1,13 +1,44 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <script src="script.js"></script>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bank Mangement System</title>
+  <title>Bank Management System</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    
+  <h1>Bank Management System</h1>
+
+  <button id="new-account-btn">New Account</button>
+
+  <div id="account-form" style="display: none;">
+    <h2>Create New Account</h2>
+    <form id="new-account-form">
+      <label for="first-name">First Name:</label>
+      <input type="text" id="first-name" required>
+      <br>
+      <label for="last-name">Last Name:</label>
+      <input type="text" id="last-name" required>
+      <br>
+      <label for="account-number">Account Number:</label>
+      <input type="text" id="account-number" required pattern="[0-9]{8}">
+      <br>
+      <label for="balance">Balance:</label>
+      <input type="number" id="balance" required min="12000">
+      <br>
+      <label for="dob">Date of Birth:</label>
+      <input type="date" id="dob" required>
+      <br>
+      <label for="phone">Phone Number:</label>
+      <input type="tel" id="phone" required pattern="[0-9]{10}">
+      <br>
+      <label for="address">Address:</label>
+      <textarea id="address" required></textarea>
+      <br>
+      <input type="submit" value="Submit">
+    </form>
+  </div>
+
+  <div id="account-list"></div>
+
+  <script src="script.js"></script>
 </body>
 </html>
